--- a/Pepper.Integration.YahooFinance/Pepper.Integration.YahooFinance/Pepper.Integration.YahooFinance.csproj
+++ b/Pepper.Integration.YahooFinance/Pepper.Integration.YahooFinance/Pepper.Integration.YahooFinance.csproj
@@ -91,9 +91,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\YahooStockEngine.cs" />
-    <Compile Include="Helpers\YahooStockEngine.cs" />
-    <Compile Include="Models\BackgroundJob.cs" />
-    <Compile Include="Models\Quote.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Functions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -108,6 +105,7 @@
       <Name>Pepper.Models</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
